--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 	<name>accounts</name>
 	<description>Microservice for Accounts</description>
 	<properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
